src/test/ui/consts/miri_unleashed/tls.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/tls.rs:12:25
   |
LL |     unsafe { let _val = A; }
   |                         ^ cannot access thread local static (DefId(0:6 ~ tls[78b0]::A))

error[E0080]: could not evaluate static initializer
  --> $DIR/tls.rs:19:26
   |
LL |     unsafe { let _val = &A; }
   |                          ^ cannot access thread local static (DefId(0:6 ~ tls[78b0]::A))

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/tls.rs:12:25
   |
LL |     unsafe { let _val = A; }
   |                         ^
help: skipping check that does not even have a feature gate
  --> $DIR/tls.rs:19:26
   |
LL |     unsafe { let _val = &A; }
   |                          ^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
